test/Harper/Tests/Good/issue001_sqr.har
sqr :: Integer -> Integer;
sqr n = n * n;

main :: Integer;
main = sqr 42;