test/Harper/Tests/Bad/DivisionByZero.har
main :: Integer;
main = 42 / 0;